# RPC

./: pyproject.toml
project/: client.py  constants.py  server.py
project/protos/: messenger.proto  messenger_pb2.py  messenger_pb2.pyi  messenger_pb2_grpc.py
